--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Rien à installer ici, il suffit d'ouvrir le fichier `index.html`.",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint . --ext js \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Mwardentoumz/Front-End-Fisheye.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
